# iretax

./: LICENSE  README.md
Taxpack/: README.md  pyproject.toml
Taxpack/src/iretax/: __init__.py  rebate_calculator.py  tax_calculator.py
Taxpack/src/iretax.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Taxpack/tests/: test_rebate_calculator.py  test_tax_calculator.py
